captcha form move

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -359,6 +359,8 @@ img {
 
       div {
         align-items: center;
+        justify-content: center;
+        text-align: center;
       }
     }
 
