--- a/scss/main.scss
+++ b/scss/main.scss
@@ -422,6 +422,7 @@ img {
       text-align: center;
       padding: 0.5rem;
       transition: all 1s;
+      cursor: pointer;
 
       &:hover {
         background: $main-color;
