--- a/scss/main.scss
+++ b/scss/main.scss
@@ -61,10 +61,6 @@ img {
   justify-content: space-between;
   padding-top: 1rem;
 
-  img {
-    cursor: pointer;
-  }
-
   ul {
     display: flex;
   }
@@ -88,6 +84,10 @@ img {
 
     &.current {
       border-color: $main-color;
+    }
+
+    img {
+      border: none;
     }
   }
 }
